Fix masthead &#x1D513; cut-off on smaller screens

--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -294,7 +294,7 @@ h3.masthead-title {
 @media (max-width: 47em) {
   .masthead-title {
     text-align: center;
-    margin-left: 42px;
+    margin-left: 50px;
   }
 }
 
